k8s/manifests/edge-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-server
  namespace: travel-booking-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edge-server
  template:
    metadata:
      labels:
        app: edge-server
    spec:
      containers:
        - name: edge-server
          image: ghcr.io/vasimvahabov/edge-server:0.7.0
          imagePullPolicy: IfNotPresent
          ports:
             - containerPort: 8003
          livenessProbe:
            failureThreshold: 2
            initialDelaySeconds: 240
            periodSeconds: 60
            httpGet:
              port: 8003
              path: /actuator/health/liveness
          readinessProbe:
            initialDelaySeconds: 360
            failureThreshold: 5
            periodSeconds: 15
            httpGet:
              port: 8003
              path: /actuator/health/readiness
