k8s/manifests/edge-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edge-server
  namespace: travel-booking-system
spec:
  type: ClusterIP
  selector:
    app: edge-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6677
